# animation

./: .env.example  .gitignore  README.md  main.py  make_video.py  pyproject.toml
examples/: 1-two_sum.md  problem_input.template.md
leetanim/: cli.py  codegen.py  env.py  llm.py  models.py  one_shot.py  pipeline.py  problem_provider.py  prompts.py  subtitles.py  utils.py
tests/: test_manim_text_wrapper.py  test_manim_timing_contract.py  test_one_shot_pipeline.py  test_problem_provider.py  test_render_manim_script.py  test_subtitles.py  test_voiceover_sanitization.py
